[package]
name = "tribute"
version = "0.1.0"
authors = ["John Barker <dev@j16r.net>"]
edition = "2018"

[dependencies]
bigdecimal = { version = "*", features = [ "serde" ] }
chrono = "0.4"
clap = "2.33"
coinbase-pro-rs = "0.5.1"
coinbase-rs = { path = "../coinbase-rs/" }
csv = "1.1.0"
futures = "*"
itertools = "0.7"
num-bigint = "0.2"
regex = "1.1.0"
serde = "1.0"
serde_derive = "1.0"
tempfile = "3"
toml = "0.5.1"
uuid = { version = "0.8.1", features = [ "serde", "v4" ] }
web3 = "0.10.0"
