[package]
name = "tribute"
version = "0.1.0"
authors = ["John Barker <dev@j16r.net>"]
edition = "2021"

[dependencies]
anyhow = "*"
bigdecimal = { version = "*", features = [ "serde" ] }
chrono = "*"
clap = "2.33"
coinbase-pro-rs = { path = "../coinbase-pro-rs/" }
#coinbase-pro-rs = "0.5.1"
coinbase-rs = { path = "../coinbase-rs/" }
csv = "*"
futures = "*"
itertools = "*"
num-bigint = "*"
regex = "*"
reqwest = { version = "*", features = ["json"] }
serde = "*"
serde_derive = "*"
tempfile = "*"
tokio = "*"
toml = "*"
uuid = { version = "*", features = [ "serde", "v4" ] }
web3 = "0.10.0"

[dev-dependencies]
pretty_assertions = "*"
